# cloud_machine

./: .gitignore  README.md  pyproject.toml
src/cloud_machine/: kalshi_client.py  main.py  md_feed_poller.py
src/cloud_machine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cloud_machine/market_discovery/: rollover_manager.py  selector.py
